@@ -8,12 +8,12 @@ server
     # site_media - folder in uri for static files
     location /media
     {
-        alias /var/www/pysis/media;
+        alias /var/www/pysis_media;
     }
 
     location ^~ /media/CACHE
     {
-        alias /var/www/pysis/media/CACHE;
+        alias /var/www/pysis_media/CACHE;
         expires max;
         access_log off;
     }
@@ -21,7 +21,7 @@ server
     location /
     {
         # host and port to fastcgi server
-        fastcgi_pass 127.0.0.1:9009;
+        fastcgi_pass unix:/tmp/pysis.fastcgi.socket;
 
         fastcgi_param PATH_INFO $fastcgi_script_name;
         fastcgi_param REQUEST_METHOD $request_method;
