@@ -1,0 +1,3 @@
+[program:pysis]
+command=/virtualenvs/pysis/bin/python /projects/pysis/deploy/pysis_fcgi.py
+user=www-data
