@@ -7,6 +7,7 @@ from django.core.servers.fastcgi import runfastcgi
 runfastcgi(method="threaded",
            minspare="1",
            maxspare="1",
-           host="127.0.0.1",
-           port="9009",
+           socket="/tmp/pysis.fastcgi.socket",
+           pidfile="/tmp/pysis.fastcgi.pid",
+           daemonize="no",
           )
