@@ -13,8 +13,8 @@ os.environ['DJANGO_SETTINGS_MODULE'] = 'pysis.settings.settings'
 os.environ['PYTHONPATH'] = '.:..:%s/apps' %  settings.PROJECT_ROOT
 
 env.master_repo = 'ssh://hg@bitbucket.org/dkmurthy/pysis'
-env.remote_repo = '/var/www/pysis'
-env.remote_env = '~/virtualenvs/pysis/bin/'
+env.remote_repo = '/projects/pysis'
+env.remote_env = '/virtualenvs/pysis/bin/'
 env.django_settings = os.environ['DJANGO_SETTINGS_MODULE']
 
 def local(cmd):
@@ -69,7 +69,7 @@ def upgrade_db():
     run('python manage.py migrate accounts')
 
 def restart_webserver():
-    run('scripts/restart_webserver.sh')
+    run('sudo supervisorctl restart pysis')
 
 def deploy(skip_tests='no'):
     if skip_tests != 'yes':
